@@ -1,5 +1,8 @@
 2010-01-15  Torbjorn Granlund  <tege@gmplib.org>
 
+	* mpn/x86/invert_limb.asm (approx_tab): Use DEF_OBJECT.
+	Rename and globalize it to work around Mac OS bug.
+
 	With Philip McLaughlin:
 	* mpn/x86_64/gcd_1.asm (ctz_table): Don't use local prefix, but
 	use DEF_OBJECT...END_OBJECT.
